--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
-    <span>Employee Management System</span>
+    <span><a routerLink="/">Employee Management System</a></span>
     <span class="spacer"></span>
     <ul>
-        <li><a mat-button>Add Employee</a></li>
+        <li><a mat-button routerLink="/create" routerLinkActive="accent">Add Employee</a></li>
     </ul>
 </mat-toolbar>
