post request issue fixed

--- a/frontend/src/app/employee/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee/employee-list/employee-list.component.html
@@ -6,13 +6,13 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
         <p>
-            {{employee.role + ' | ' + employee.email}}
+            {{employee.role + ' | ' + employee.email + ' | ' + employee.id}}
         </p>
         <p *ngIf="employee.status">Active</p>
         <p *ngIf="!employee.status">Inactive</p>
         <mat-action-row>
             <button mat-button color="primary">EDIT</button>
-            <button *ngIf="employee.status" mat-button color="warn">DELETE</button>
+            <button *ngIf="employee.status" mat-button color="warn" (click)="onDelete(employee.id)">DELETE</button>
         </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
