edit employee operation added

--- a/frontend/src/app/employee/employee-create/employee-create.component.html
+++ b/frontend/src/app/employee/employee-create/employee-create.component.html
@@ -6,6 +6,7 @@
             matInput
             placeholder="Enter first name"
             formControlName="firstName"
+            [ngModel]="employee?.firstName"
             >
             <mat-error 
             *ngIf="form.get('firstName').invalid"
@@ -18,6 +19,7 @@
             matInput 
             placeholder="Enter last name"
             formControlName="lastName"
+            [ngModel]="employee?.lastName"
             >
             <mat-error 
             *ngIf="form.get('lastName').invalid"
@@ -30,6 +32,7 @@
             matInput
             placeholder="Enter email"
             formControlName="email"
+            [ngModel]="employee?.email"
             >
             <mat-error 
             *ngIf="form.get('email').invalid"
@@ -38,7 +41,7 @@
         <br>
         <mat-form-field>
             <mat-label>Role</mat-label>
-            <mat-select formControlName="role">
+            <mat-select formControlName="role" [ngModel]="employee?.role">
                 <mat-option *ngFor="let role of roles" [value]="role.value">
                     {{role.viewValue}}
                 </mat-option>
@@ -48,6 +51,7 @@
         <mat-checkbox
         placeholder="Status"
         formControlName="status"
+        [ngModel]="employee?.status"
         >Status</mat-checkbox>
         <hr>
         <button type="submit" mat-raised-button color="accent">Save Employee</button>
