--- a/frontend/src/app/employee/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee/employee-list/employee-list.component.html
@@ -1,4 +1,5 @@
-<mat-accordion multi="true" *ngIf="employees.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="employees.length > 0 && !isLoading">
     <mat-expansion-panel *ngFor="let employee of employees">
         <mat-expansion-panel-header>
             <mat-panel-title>
@@ -16,3 +17,4 @@
         </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
+<p *ngIf="employees.length <=0 && !isLoading">No employee exists</p>
