--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<mat-card>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <form (submit)="onLogin(loginForm)" #loginForm="ngForm" *ngIf="!isLoading">
+        <mat-form-field>
+            <input name="email" placeholder="Enter EMail" ngModel type="email" matInput #emailInput="ngModel" required email>
+            <mat-error *ngIf="emailInput.invalid">Please enter email</mat-error>
+        </mat-form-field>
+        <br>
+        
+        <mat-form-field>
+            <input name="password" type="password" placeholder="Enter password" ngModel matInput #passwordInput="ngModel" required>
+            <mat-error *ngIf="passwordInput.invalid">Please enter password</mat-error>
+        </mat-form-field>
+        <button type="submit" mat-raised-button color="accent" *ngIf="!isLoading">Login</button>
+        
+    </form>
+</mat-card>
