--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -2,6 +2,7 @@
     <span><a routerLink="/">Employee Management System</a></span>
     <span class="spacer"></span>
     <ul>
-        <li><a mat-button routerLink="/create" routerLinkActive="accent">Add Employee</a></li>
+        <li><a mat-button routerLink="/create" routerLinkActive="mat-accent">Add Employee</a></li>
+        <li><a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a></li>
     </ul>
 </mat-toolbar>
