--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -4,5 +4,6 @@
     <ul>
         <li><a mat-button routerLink="/create" routerLinkActive="mat-accent">Add Employee</a></li>
         <li><a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a></li>
+        <li><a mat-button routerLink="/signup" routerLinkActive="mat-accent">Sign Up</a></li>
     </ul>
 </mat-toolbar>
