--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -2,8 +2,9 @@
     <span><a routerLink="/">Employee Management System</a></span>
     <span class="spacer"></span>
     <ul>
-        <li><a mat-button routerLink="/create" routerLinkActive="mat-accent">Add Employee</a></li>
-        <li><a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a></li>
-        <li><a mat-button routerLink="/signup" routerLinkActive="mat-accent">Sign Up</a></li>
+        <li *ngIf="userIsAuthenticated"><a mat-button routerLink="/create" routerLinkActive="mat-accent">Add Employee</a></li>
+        <li *ngIf="!userIsAuthenticated"><a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a></li>
+        <li *ngIf="!userIsAuthenticated"><a mat-button routerLink="/signup" routerLinkActive="mat-accent">Sign Up</a></li>
+        <li *ngIf="userIsAuthenticated"><button mat-button (click)="onLogout()">Log out</button></li>
     </ul>
 </mat-toolbar>
